[package]
name = "rustchain_discord_bot"
authors = ["Alex Furrier <safurrier@gmail.com>"]
description = "A Discord bot for LLM chain apps"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/safurrier/rustchain-discord-bot"

[dependencies]
poise="0.5.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
llm-chain = "0.12.0"
llm-chain-openai = "0.12.0"
log = "0.4"
env_logger = "0.9"
regex = "1"

